syntax = "proto3";

option go_package = "protos/in/user";

package user;

service User {
    rpc UserInfo(G2S_UserInfo) returns (S2G_UserInfo) {}
}

message G2S_UserInfo {
    string id = 1;
}

message S2G_UserInfo {
    UserDTO user = 1;
}

message UserDTO {
    string id = 1;
    string username = 2;
}
